프로그램 돌아가도록 환경설정 진행완료

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,9 @@ out/
 
 ### properties ###
 *.properties
+
+### application-private.yml ###
+/src/main/resources/application-private.yml
+
+### .env ###
+.env
